Fix padding and transparency issues on overlap

--- a/ui/src/app/pages/login/login.page.scss
+++ b/ui/src/app/pages/login/login.page.scss
@@ -181,6 +181,7 @@ ion-content {
         right: 0;
         bottom: 0;
         z-index: 1;
+        max-width: 100vw;
       }
 
       .right-side {
@@ -189,6 +190,7 @@ ion-content {
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
+        background-color: transparent;
       }
     }
   }
